--- a/pom.xml
+++ b/pom.xml
@@ -13,16 +13,16 @@
 	</properties>
 	
 	<build>
-		<plugins>
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.3</version>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-				</configuration>
-			</plugin>
-		</plugins>
+  		<plugins>
+   		 	<plugin>
+		      	<groupId>org.apache.maven.plugins</groupId>
+		      	<artifactId>maven-compiler-plugin</artifactId>
+		     	<configuration>
+		        	<source>1.8</source>
+		        	<target>1.8</target>
+	     		</configuration>
+	    	</plugin>
+	  	</plugins>
 	</build>
 	
 	<repositories>
@@ -38,9 +38,25 @@
 	
 	<dependencies>
 		<dependency>
+		  <groupId>org.joml</groupId>
+		  <artifactId>joml</artifactId>
+		  <version>1.5.1-SNAPSHOT</version>
+		  <scope>system</scope>
+		  <systemPath>${project.basedir}/jar/joml-1.5.1-SNAPSHOT.jar</systemPath>
+		</dependency>
+		<dependency>
+		  <groupId>org.joml</groupId>
+		  <artifactId>joml-camera</artifactId>
+		  <version>1.0.0-SNAPSHOT</version>
+		  <scope>system</scope>
+		  <systemPath>${project.basedir}/jar/joml-camera-1.0.0-SNAPSHOT.jar</systemPath>
+		</dependency>
+		<dependency>
 			<groupId>org.lwjgl</groupId>
 			<artifactId>lwjgl</artifactId>
 			<version>${lwjgl.version}</version>
+			<scope>system</scope>
+		  <systemPath>${project.basedir}/jar/lwjgl.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>org.lwjgl</groupId>
