--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
   		<plugins>
    		 	<plugin>
 		      	<groupId>org.apache.maven.plugins</groupId>
+		      	<version>3.3</version>
 		      	<artifactId>maven-compiler-plugin</artifactId>
 		     	<configuration>
 		        	<source>1.8</source>
